# os-coursework

./: .clang-format  .gitignore  README.md  report.lof  report.tex
src/: CMakeLists.txt  linenoise.c  linenoise.h  peek_stream.c  peek_stream.h  tish.c  token_vec.c  token_vec.h  tokenizer.c  tokenizer.h
src/task1/: qa  qa.c  qb.c  qc.c  qd.c  qe.c
src/task2/: qa.c  qab.c
src/task3/: builtin.c  builtin.h  external.c  external.h  parse  parse_execute.c  parse_execute.h  string_t.c  string_t.h  test.txt  tish  tish.c  token_t.c  token_vec_t.c  token_vec_t.h  tokeniser.c  tokeniser.h  util.h
src/task3/unused/: peek_stream_t.c  peek_stream_t.h  string_vec_t.c
src/task3and4/: builtin.c  builtin.h  external.c  external.h  interpreter.c  interpreter.h  parse_execute.c  parse_execute.h  string_t.c  string_t.h  tests.txt  tish  tish.c  tish_test.c  token.c  token_t.h  token_vec_t.c  tokeniser.c  tokeniser.h
src/task3and4/refinements/: Tokeniser.c  Tokeniser.h
src/task3and4/unused/: parse_execute.c  string_vec_t.h  tish.c  token_t.c  token_vec_t.h
src/unused/: linenoise.c  peek_stream.h  tokenizer.c  util.h
src/util/: string_vec.c  string_vec.h  tish.c  tokeniser.c  tokeniser.h  tokenizer.h
